--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>PUPPALA MOHAN - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
+            <h1>PUPPALA MOHAN</h1>
             <p>Computer Science Engineering Student | Passionate Developer</p>
             <nav>
                 <ul>
@@ -25,7 +25,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Brief introduction about yourself, your interests, and what you're studying.</p>
+            <p>Welcome to my website! I'm Puppala Mohan, a passionate coder and problem solver dedicated to transforming ideas into reality through technology. With a strong foundation in programming and a love for tackling complex challenges, I thrive on creating innovative solutions that make a difference. Whether it's developing software, optimizing algorithms, or diving into new technologies, I am always eager to learn and grow. Join me on this journey as I share my projects, insights, and the endless possibilities that coding can bring!</p>
         </div>
     </section>
 
@@ -44,13 +44,13 @@
     <section id="contact">
         <div class="container">
             <h2>Contact Me</h2>
-            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+            <p>Email: <a href="mailto:your.email@example.com">puppalamohanbabu@gmail.com</a></p>
             <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name. All Rights Reserved.</p>
+        <p>&copy; 2024 PUPPALA MOHAN. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
