--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <div class="project-card">
                 <h3>Project Title</h3>
                 <p>Description of the project and technologies used.</p>
-                <a href="#" class="btn">View Project</a>
-            </div>
+                <a href="https://github.com/puppalamohan?tab=repositories" class="btn">View Project</a>
+</div>
             <!-- Add more project cards as needed -->
         </div>
     </section>
