--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project-card">
-                <h3>Project Title</h3>
-                <p>Description of the project and technologies used.</p>
+                <h3>Project Description</h3>
+                <p>Welcome to my web development portfolio! This website is a testament to my skills and passion for creating engaging and functional web applications. My projects leverage HTML5 and CSS3 to deliver stylish and responsive designs that enhance user experience and accessibility. Explore my work to see how I solve real-world problems and push the boundaries of technology!</p>
+                
+                <h4>Technologies Used</h4>
+                <ul>
+                    <li><strong>HTML5</strong>: Structured and semantic markup for a solid project foundation.</li>
+                    <li><strong>CSS3</strong>: Stylish and responsive designs that enhance user experience.</li>
+                </ul>
+
                 <a href="https://github.com/puppalamohan?tab=repositories" class="btn">View Project</a>
-</div>
-            <!-- Add more project cards as needed -->
+            </div>
         </div>
     </section>
 
