--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <h3>LinkedIn</h3>
                 <p>Professional Profile</p>
             </a>
-            <a href="https://github.com/puppalamohan" target="_blank" class="contact-card">
+            <a href="https://github.com/mohanpuppala" target="_blank" class="contact-card">
                 <h3>GitHub</h3>
                 <p>Check my code repositories</p>
             </a>
@@ -330,3 +330,4 @@
 
 </body>
 </html>
+
