Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             
             <div class="quick-socials">
                 <a href="https://github.com/puppalamohan" class="social-icon-link" target="_blank">GitHub</a>
-                <a href="https://linkedin.com/in/your-profile" class="social-icon-link" target="_blank">LinkedIn</a>
+                <a href="https://linkedin.com/in/mohanpuppala" class="social-icon-link" target="_blank">LinkedIn</a>
                 <a href="mailto:puppalamohanbabu@gmail.com" class="social-icon-link">Email</a>
             </div>
 
@@ -311,11 +311,11 @@
                 <h3>Email</h3>
                 <p>puppalamohanbabu@gmail.com</p>
             </a>
-            <a href="https://linkedin.com/in/your-profile" target="_blank" class="contact-card">
+            <a href="https://linkedin.com/in/mohanpuppala" target="_blank" class="contact-card">
                 <h3>LinkedIn</h3>
                 <p>Professional Profile</p>
             </a>
-            <a href="https://github.com/mohanpuppala" target="_blank" class="contact-card">
+            <a href="https://github.com/puppalamohan" target="_blank" class="contact-card">
                 <h3>GitHub</h3>
                 <p>Check my code repositories</p>
             </a>
@@ -330,4 +330,5 @@
 
 </body>
 </html>
+
 
